[package]
name = "tx2-pack"
version = "0.1.0"
edition = "2021"
authors = ["TX-2 Contributors"]
license = "MIT"
description = "Binary world snapshot format for ECS persistence, checkpointing, and time-travel"
repository = "https://github.com/IreGaddr/tx2-pack"
homepage = "https://github.com/IreGaddr/tx2-pack"
documentation = "https://docs.rs/tx2-pack"
keywords = ["ecs", "snapshot", "checkpoint", "replay", "persistence"]
categories = ["game-development", "encoding", "compression"]
readme = "README.md"

[dependencies]
tx2-link = { version = "0.1.0", path = "../tx2-link" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rmp-serde = "1.3"
thiserror = "1.0"
bytes = "1.0"
ahash = "0.8"
zstd = "0.13"
lz4 = "1.26"
sha2 = "0.10"
aes-gcm = { version = "0.10", optional = true }
chrono = "0.4"
memmap2 = "0.9"

[features]
default = ["compression", "encryption"]
compression = []
encryption = ["aes-gcm"]

[dev-dependencies]
tempfile = "3.0"
criterion = "0.5"

[[bench]]
name = "snapshot_io"
harness = false
